--- a/package.json
+++ b/package.json
@@ -111,13 +111,13 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "@polkadot/api": "^2.3.2-2",
-    "@polkadot/extension-inject": "^0.34.1",
-    "@polkadot/keyring": "^3.6.1",
-    "@polkadot/react-identicon": "^0.61.1",
-    "@polkadot/types": "^2.3.2-2",
-    "@polkadot/util": "^3.6.1",
-    "@polkadot/util-crypto": "^3.6.1",
+    "@polkadot/api": "^4.7.2",
+    "@polkadot/extension-inject": "^0.37.2",
+    "@polkadot/keyring": "^6.3.1",
+    "@polkadot/react-identicon": "^0.75.1",
+    "@polkadot/types": "^4.7.2",
+    "@polkadot/util": "^6.3.1",
+    "@polkadot/util-crypto": "^6.3.1",
     "@types/react": "^16.8.10",
     "@types/react-redux": "^6.0.14",
     "autoprefixer": "^7.2.5",
